<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="bios_ntsc_j">NTSC-J (Japan)</string>
    <string name="bios_ntsc_u">NTSC-U/C (US/Canada)</string>
    <string name="bios_pal">PAL (Europe, Australia)</string>
    <string name="menu_navigation_delete_bios">Delete BIOS</string>
    <string name="menu_navigation_import_bios">Import BIOS</string>
    <string name="settings_achievements_achievement_notifications">Show Achievement Notifications</string>
    <string name="settings_achievements_category">Account</string>
    <string name="settings_achievements_challenge_mode">Enable Hardcore Mode</string>
    <string name="settings_achievements_disclaimer">DuckStation uses RetroAchievements (retroachievements.org) as an achievement database and for tracking progress.</string>
    <string name="settings_achievements_enable">Enable RetroAchievements</string>
    <string name="settings_achievements_encore_mode">Enable Encore Mode</string>
    <string name="settings_achievements_global_settings">Global Settings</string>
    <string name="settings_achievements_leaderboard_notifications">Show Leaderboard Notifications</string>
    <string name="settings_achievements_login">Login</string>
    <string name="settings_achievements_logout">Logout</string>
    <string name="settings_achievements_overlays">Enable In-Game Overlays</string>
    <string name="settings_achievements_register">Register</string>
    <string name="settings_achievements_sound_effects">Enable Sound Effects</string>
    <string name="settings_achievements_spectator_mode">Enable Spectator Mode</string>
    <string name="settings_achievements_test_unofficial">Test Unofficial Achievements</string>
    <string name="settings_achievements_token_generation_time">Token Generation Time</string>
    <string name="settings_achievements_username">User Name</string>
    <string name="settings_achievements_view_profile">View Profile</string>
    <string name="settings_apply_compatibility_settings">Apply Compatibility Settings</string>
    <string name="settings_apply_game_settings">Apply Game Settings</string>
    <string name="settings_category_cdrom">CD-ROM Settings</string>
    <string name="settings_category_cpu">CPU Settings</string>
    <string name="settings_category_debug">Debug Settings</string>
    <string name="settings_category_global">Global Settings</string>
    <string name="settings_category_gpu">GPU Settings</string>
    <string name="settings_category_logging">Logging Settings</string>
    <string name="settings_category_regions">Regions</string>
    <string name="settings_cdrom_readahead">Async Readahead</string>
    <string name="settings_cdrom_region_check">Region Check</string>
    <string name="settings_console_tty_output">Enable TTY Output</string>
    <string name="settings_cpu_execution_mode">CPU Execution Mode</string>
    <string name="settings_cpu_recompiler_block_linking">CPU Recompiler Block Linking</string>
    <string name="settings_cpu_recompiler_fastmem">CPU Recompiler Fast Memory Access</string>
    <string name="settings_cpu_recompiler_icache">CPU Recompiler ICache</string>
    <string name="settings_disable_dual_source_blend">Disable Dual-Source Blending</string>
    <string name="settings_disable_framebuffer_fetch">Disable Framebuffer Fetch</string>
    <string name="settings_disable_shader_cache">Disable Shader Caches</string>
    <string name="settings_disable_texture_buffers">Disable Texture Buffers</string>
    <string name="settings_disable_texture_copy_to_self">Disable Texture Copy To Self</string>
    <string name="settings_gpu_thread">Threaded Rendering</string>
    <string name="settings_line_detection_mode">Line Detection</string>
    <string name="settings_log_to_file">Log To File</string>
    <string name="settings_log_to_logcat">Log To Logcat</string>
    <string name="settings_logging_level">Logging Level</string>
    <string name="settings_max_queued_frames">Maximum Queued Frames</string>
    <string name="settings_msaa">Multisample Antialiasing</string>
    <string name="settings_pgxp_color_correction">PGXP Color Perspective Correction</string>
    <string name="settings_pgxp_cpu_mode">PGXP CPU Mode</string>
    <string name="settings_pgxp_culling_correction">PGXP Culling Correction</string>
    <string name="settings_pgxp_disable_on_2d_polygons">PGXP Disable on 2D Polygons</string>
    <string name="settings_pgxp_geometry_correction">PGXP Geometry Correction</string>
    <string name="settings_pgxp_preserve_projection_precision">PGXP Preserve Projection Precision</string>
    <string name="settings_pgxp_texture_correction">PGXP Texture Perspective Correction</string>
    <string name="settings_pgxp_vertex_cache">PGXP Vertex Cache</string>
    <string name="settings_round_upscaled_texture_coordinates">Round Upscaled Texture Coordinates</string>
    <string name="settings_save_state_compression">Save State Compression</string>
    <string name="settings_scaled_interlacing">Scaled Interlacing</string>
    <string name="settings_screenshot_format">Screenshot Format</string>
    <string name="settings_screenshot_mode">Screenshot Mode</string>
    <string name="settings_show_vram">Show VRAM</string>
    <string name="settings_summary_achievements_achievement_notifications">Displays popup messages on events such as achievement unlocks and leaderboard submissions.</string>
    <string name="settings_summary_achievements_challenge_mode">Challenge mode for achievements, including leaderboard tracking. Disables save state, cheats, and slowdown functions.</string>
    <string name="settings_summary_achievements_enable">When enabled and logged in, DuckStation will scan for achievements on startup.</string>
    <string name="settings_summary_achievements_encore_mode">When enabled, each session will behave as if no achievements have been unlocked.</string>
    <string name="settings_summary_achievements_leaderboard_notifications">Displays popup messages when starting, submitting, or failing a leaderboard challenge.</string>
    <string name="settings_summary_achievements_login">Logs in to your account to record achievements.</string>
    <string name="settings_summary_achievements_logout">Logs out of your account. No new achievements will be recorded.</string>
    <string name="settings_summary_achievements_overlays">Shows icons in the lower-right corner of the screen when a challenge/primed achievement is active.</string>
    <string name="settings_summary_achievements_register">Opens a link to create a new account.</string>
    <string name="settings_summary_achievements_sound_effects">Plays sound effects for events such as achievement unlocks and leaderboard submissions.</string>
    <string name="settings_summary_achievements_spectator_mode">When enabled, DuckStation will assume all achievements are locked and not send any unlock notifications to the server.</string>
    <string name="settings_summary_achievements_test_unofficial_test">When enabled, DuckStation will list achievements from unofficial sets. Please note that these achievements are not tracked by RetroAchievements, so they unlock every time.</string>
    <string name="settings_summary_achievements_view_profile">Opens a link to your profile.</string>
    <string name="settings_summary_apply_compatibility_settings">Automatically disable enhancements when they are not supported by games.</string>
    <string name="settings_summary_apply_game_settings">Enables loading of per-game configuration. If this option is disabled, only the global configuration will be used.</string>
    <string name="settings_summary_cdrom_region_check">Prevents discs from incorrect regions being read by the emulator. Usually safe to disable.</string>
    <string name="settings_summary_console_tty_output">Logs debug messages printed by games.</string>
    <string name="settings_summary_cpu_recompiler_block_linking">Enables the generated code to directly jump between blocks without going through the dispatcher. Provides a measurable speed boost.</string>
    <string name="settings_summary_cpu_recompiler_fastmem">Makes guest memory access more efficient by using page faults and backpatching. Disable if it is unstable on your device.</string>
    <string name="settings_summary_cpu_recompiler_icache">"Determines whether the CPU's instruction cache is simulated in the recompiler. Improves accuracy at a small cost to performance. If games are running too fast, try enabling this option."</string>
    <string name="settings_summary_delete_bios">Deletes a BIOS that was previously imported.</string>
    <string name="settings_summary_disable_dual_source_blend">Prevents the use of the dual-source blending extensions.</string>
    <string name="settings_summary_disable_framebuffer_fetch">Prevents the use of the framebuffer fetch extensions.</string>
    <string name="settings_summary_disable_shader_cache">Prevents the caching of shaders, forcing them to be recompiled every time.</string>
    <string name="settings_summary_disable_texture_buffers">Prevents the use of the texture/shader storage buffers. Will reduce performance.</string>
    <string name="settings_summary_disable_texture_copy_to_self">Always copies through the shadow texture. Will reduce performance.</string>
    <string name="settings_summary_gpu_thread">Uses a second thread for drawing graphics. Speed boost, and safe to use.</string>
    <string name="settings_summary_import_bios">Import a new BIOS file not currently in this list.</string>
    <string name="settings_summary_log_to_file">Writes log messages to duckstation.log in your user directory. Only use for debugging as it slows down emulation.</string>
    <string name="settings_summary_log_to_logcat">Writes log messages to the Android message logger. Only useful when attached to a computer with adb.</string>
    <string name="settings_summary_pgxp_color_correction">Uses perspective-correct interpolation for colors, which can improve visuals in some games.</string>
    <string name="settings_summary_pgxp_cpu_mode">Tries to track vertex manipulation through the CPU. Some games require this option for PGXP to be effective. Very high performance penalty.</string>
    <string name="settings_summary_pgxp_culling_correction">Increases the precision of polygon culling, reducing the number of holes in geometry.</string>
    <string name="settings_summary_pgxp_disable_on_2d_polygons">Uses native resolution coordinates for 2D polygons, instead of precise coordinates. Can fix misaligned UI in some games, but otherwise should be left disabled.</string>
    <string name="settings_summary_pgxp_preserve_projection_precision">Adds additional precision to PGXP data post-projection. May improve visuals in some games.</string>
    <string name="settings_summary_pgxp_texture_correction">Uses perspective-correct interpolation for texture coordinates, straightening out warped textures.</string>
    <string name="settings_summary_pgxp_vertex_cache">Uses screen coordinates as a fallback when tracking vertices through memory fails. May improve PGXP compatibility.</string>
    <string name="settings_summary_round_upscaled_texture_coordinates">Rounds texture coordinates instead of flooring when upscaling. Can fix misaligned textures in some games, but break others, and is incompatible with texture filtering.</string>
    <string name="settings_summary_scaled_interlacing">Scales line skipping in interlaced rendering to the internal resolution, making it less noticeable. Usually safe to enable.</string>
    <string name="settings_summary_show_vram">"Shows the entirety of the console's VRAM instead of the display area (debugging feature)."</string>
    <string name="settings_summary_use_debug_gpu_device">Enables validation of GPU commands. Slower, but can be used for debugging.</string>
    <string name="settings_use_debug_gpu_device">Use Debug Host GPU Device</string>
</resources>