<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory app:iconSpaceReserved="false" app:title="@string/settings_achievements_global_settings">
        <com.github.stenzek.duckstation.TriStatePreference app:iconSpaceReserved="false" app:key="Cheevos/Enabled" app:summary="@string/settings_summary_achievements_enable" app:title="@string/settings_achievements_enable" />
        <com.github.stenzek.duckstation.TriStatePreference app:dependency="Cheevos/Enabled" app:iconSpaceReserved="false" app:key="Cheevos/ChallengeMode" app:summary="@string/settings_summary_achievements_challenge_mode" app:title="@string/settings_achievements_challenge_mode" />
        <com.github.stenzek.duckstation.TriStatePreference app:dependency="Cheevos/Enabled" app:iconSpaceReserved="false" app:key="Cheevos/EncoreMode" app:summary="@string/settings_summary_achievements_encore_mode" app:title="@string/settings_achievements_encore_mode" />
        <com.github.stenzek.duckstation.TriStatePreference app:dependency="Cheevos/Enabled" app:iconSpaceReserved="false" app:key="Cheevos/SpectatorMode" app:summary="@string/settings_summary_achievements_spectator_mode" app:title="@string/settings_achievements_spectator_mode" />
        <com.github.stenzek.duckstation.TriStatePreference app:dependency="Cheevos/Enabled" app:iconSpaceReserved="false" app:key="Cheevos/UnofficialTestMode" app:summary="@string/settings_summary_achievements_test_unofficial_test" app:title="@string/settings_achievements_test_unofficial" />
        <com.github.stenzek.duckstation.TriStatePreference app:dependency="Cheevos/Enabled" app:iconSpaceReserved="false" app:key="Cheevos/Notifications" app:summary="@string/settings_summary_achievements_achievement_notifications" app:title="@string/settings_achievements_achievement_notifications" />
        <com.github.stenzek.duckstation.TriStatePreference app:dependency="Cheevos/Enabled" app:iconSpaceReserved="false" app:key="Cheevos/LeaderboardNotifications" app:summary="@string/settings_summary_achievements_leaderboard_notifications" app:title="@string/settings_achievements_leaderboard_notifications" />
        <com.github.stenzek.duckstation.TriStatePreference app:dependency="Cheevos/Enabled" app:iconSpaceReserved="false" app:key="Cheevos/SoundEffects" app:summary="@string/settings_summary_achievements_sound_effects" app:title="@string/settings_achievements_sound_effects" />
        <com.github.stenzek.duckstation.TriStatePreference app:dependency="Cheevos/Enabled" app:iconSpaceReserved="false" app:key="Cheevos/Overlays" app:summary="@string/settings_summary_achievements_overlays" app:title="@string/settings_achievements_overlays" />
    </PreferenceCategory>
    <PreferenceCategory app:iconSpaceReserved="false" app:title="@string/settings_achievements_disclaimer" />
</PreferenceScreen>
