<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference app:icon="@drawable/ic_baseline_add_24" app:key="BIOS/Import" app:summary="@string/settings_summary_import_bios" app:title="@string/menu_navigation_import_bios" />
    <Preference app:icon="@drawable/ic_baseline_delete_24" app:key="BIOS/Delete" app:summary="@string/settings_summary_delete_bios" app:title="@string/menu_navigation_delete_bios" />
    <PreferenceCategory app:iconSpaceReserved="false" app:title="@string/settings_category_regions">
        <com.github.stenzek.duckstation.BIOSNamePreference app:defaultValue="" app:icon="@drawable/flag_japanese" app:key="BIOS/PathNTSCJ" app:title="@string/bios_ntsc_j" />
        <com.github.stenzek.duckstation.BIOSNamePreference app:defaultValue="" app:icon="@drawable/flag_ntsc_u" app:key="BIOS/PathNTSCU" app:title="@string/bios_ntsc_u" />
        <com.github.stenzek.duckstation.BIOSNamePreference app:defaultValue="" app:icon="@drawable/flag_pal" app:key="BIOS/PathPAL" app:title="@string/bios_pal" />
    </PreferenceCategory>
</PreferenceScreen>
